# SQLGen

./: .gitignore  CMakeLists.txt  Error.cpp  Error.h  LICENSE  README.md  SQLEmitter.cpp  SQLInsertEmitter.cpp  SQLInsertEmitter.h  SQLQueryEmitter.cpp  SQLQueryEmitter.h  SQLTableEmitter.cpp  SQLTableEmitter.h  sqlgen.cpp
test/: CMakeLists.txt  CreateTables.td  InsertRows.td  MakeQueries.td  Query.td  Table.td  lit.cfg.py  lit.site.cfg.py.in  llvm-lit
